--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,9 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-rock:build"
+            "browserTarget": "ng-rock:build",
+            "host": "0.0.0.0",
+            "publicHost": "triklops"
           },
           "configurations": {
             "production": {
@@ -117,6 +119,41 @@
             "production": {
               "devServerTarget": "ng-rock:serve:production"
             }
+          }
+        }
+      }
+    },
+    "AuthInterceptor": {
+      "projectType": "library",
+      "root": "projects/auth-interceptor",
+      "sourceRoot": "projects/auth-interceptor/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/auth-interceptor/tsconfig.lib.json",
+            "project": "projects/auth-interceptor/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/auth-interceptor/src/test.ts",
+            "tsConfig": "projects/auth-interceptor/tsconfig.spec.json",
+            "karmaConfig": "projects/auth-interceptor/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/auth-interceptor/tsconfig.lib.json",
+              "projects/auth-interceptor/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
