--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs-compat": "^6.5.3",
     "sockjs-client": "^1.4.0",
     "stompjs": "^2.3.3",
+    "text-encoding": "^0.7.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
