--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "ng-rock:build",
-            "host": "0.0.0.0",
+            "host": "::",
             "publicHost": "triklops"
           },
           "configurations": {
