Remove direct reference to my development server name. Add disableHostCheck to allow connection as any host.  For developement environment only

--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,7 @@
           "options": {
             "browserTarget": "ng-rock:build",
             "host": "::",
-            "publicHost": "triklops",
+            "disableHostCheck": true,
             "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
