--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "ng test --browsers ChromeHeadless",
+    "test:ci": "ng test --browsers ChromeHeadless --watch false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -46,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-spec-reporter": "0.0.32",
     "ng-packagr": "^9.0.0",
     "protractor": "^5.4.3",
     "ts-node": "~7.0.0",
