--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-junit-reporter": "^2.0.1",
     "karma-spec-reporter": "0.0.32",
     "ng-packagr": "^9.0.0",
     "protractor": "^5.4.3",
