--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,9 @@
         }
       }
     }
-    },
-  "defaultProject": "ng-rock"
+  },
+  "defaultProject": "ng-rock",
+  "cli": {
+    "analytics": false
+  }
 }
