--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test --browsers ChromeHeadless",
-    "test:ci": "ng test --browsers ChromeHeadless --watch false",
+    "test:ci": "ng test --browsers ChromeHeadless --watch false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
