--- a/package.json
+++ b/package.json
@@ -1,56 +1,43 @@
 {
   "name": "ng-rock",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "watch": "ng build --watch --configuration development",
     "test": "ng test --browsers ChromeHeadless",
-    "test:ci": "ng test --browsers ChromeHeadless --watch false --code-coverage",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "test:ci": "ng test --browsers ChromeHeadless --watch false --code-coverage"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.4",
-    "@angular/common": "~13.2.4",
-    "@angular/compiler": "~13.2.4",
-    "@angular/core": "~13.2.4",
-    "@angular/forms": "~13.2.4",
-    "@angular/platform-browser": "~13.2.4",
-    "@angular/platform-browser-dynamic": "~13.2.4",
-    "@angular/router": "~13.2.4",
-    "@stomp/rx-stomp": "^0.3.5",
-    "minimist": "^1.2.5",
-    "rxjs": "^6.6.3",
-    "rxjs-compat": "^6.6.3",
-    "sockjs-client": "^1.5.0",
-    "stompjs": "^2.3.3",
+    "@angular/animations": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/router": "^14.0.0",
+    "@stomp/rx-stomp": "^1.1.4",
+    "karma-junit-reporter": "^2.0.1",
+    "rxjs": "~7.5.0",
     "text-encoding": "^0.7.0",
-    "tslib": "^2.3.1",
-    "webpack-subresource-integrity": ">=1.5.1",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.2.5",
-    "@angular/cli": "^13.2.5",
-    "@angular/language-service": "~13.2.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.4",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "^3.9.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.14",
+    "@angular-devkit/build-angular": "^14.0.3",
+    "@angular/cli": "~14.0.3",
+    "@angular/compiler-cli": "^14.0.0",
+    "@types/jasmine": "~4.0.0",
+    "@types/text-encoding": "^0.0.36",
+    "jasmine-core": "~4.1.0",
+    "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-junit-reporter": "^2.0.1",
-    "karma-spec-reporter": "0.0.32",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.5.5"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "typescript": "~4.7.2"
   }
 }
