--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ng-rock",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test --browsers ChromeHeadless",
+    "test": "ng test --browsers ChromeHeadless --watch false",
     "test:ci": "ng test --browsers ChromeHeadless --watch false --code-coverage"
   },
   "private": true,
