Finish api.service test

--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,7 @@
               "src/styles.css"
             ],
             "scripts": [],
-            "codeCoverageExclude": ["src/polyfills.ts"]
+            "codeCoverageExclude": ["src/polyfills.ts", "src/env.service.ts"]
           }
         }
       }
