--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "ng-rock",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test --browsers ChromeHeadless --watch false",
-    "test:ci": "ng test --browsers ChromeHeadless --watch false --code-coverage"
+    "test:ci": "ng test --browsers ChromeHeadless --watch false --code-coverage",
+    "serveAll": "ng serve --port 4200 --host 0.0.0.0 --disable-host-check"
   },
   "private": true,
   "dependencies": {
