--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,7 @@
             "outputPath": "dist/ng-rock",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ng-rock:build:production"
+              "buildTarget": "ng-rock:build:production"
             },
             "development": {
-              "browserTarget": "ng-rock:build:development"
+              "buildTarget": "ng-rock:build:development"
             }
           },
           "defaultConfiguration": "development",
@@ -84,8 +84,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
@@ -96,7 +95,7 @@
               "src/styles.css"
             ],
             "scripts": [],
-            "codeCoverageExclude": ["src/polyfills.ts", "src/app/env.service.ts", "src/app/websocket.service.ts"]
+            "codeCoverageExclude": ["src/app/env.service.ts", "src/app/websocket.service.ts"]
           }
         }
       }
